--- a/social-book.css
+++ b/social-book.css
@@ -3,18 +3,20 @@
     padding: 0;
     box-sizing: border-box;
     line-height: 1.2;
-    
+
 }
 
 body {
     font-family: SFProDisplay-Regular, Helvetica, Arial, sans-serif;
+    background-color:  #f0f2f5;
 }
 
-.showcase{
+.showcase {
     padding-top: 92px;
     padding-bottom: 132px;
     background-color: #f0f2f5;
 }
+
 .container {
     display: flex;
     justify-content: space-around;
@@ -28,8 +30,8 @@ body {
 }
 
 .logo {
-    width: 200px; 
-    margin:-20px;
+    width: 200px;
+    margin: -20px;
     padding-bottom: 10px;
 }
 
@@ -37,7 +39,7 @@ body {
 .recent-l {
     font-size: 29px;
     font-weight: 300;
-}   
+}
 
 .user-suggestion {
     color: #606770;
@@ -45,7 +47,7 @@ body {
     padding-bottom: 12px;
 }
 
-.accounts{
+.accounts {
     display: flex;
     align-items: center;
     margin-right: 20px;
@@ -61,13 +63,13 @@ body {
     position: relative;
 }
 
-.account-card:hover{
-   box-shadow: 0px 0px 5px 3px  rgba(219, 219, 219, 0.5), 0px 0px 5px 3px rgba(219, 219, 219, 0.5), 0px 0px 5px 3px rgba(219, 219, 219, 0.5);
-   transition: all ease-out 0.2s;
+.account-card:hover {
+    box-shadow: 0px 0px 5px 3px rgba(219, 219, 219, 0.5), 0px 0px 5px 3px rgba(219, 219, 219, 0.5), 0px 0px 5px 3px rgba(219, 219, 219, 0.5);
+    transition: all ease-out 0.2s;
 }
 
-.account-card.card1::before{
-    content:"x";
+.account-card.card1::before {
+    content: "x";
     background-color: #ffffff1b;
     padding: 0.4px 6px 0.4px 6px;
     font-size: 15px;
@@ -75,11 +77,11 @@ body {
     border-radius: 30px;
     position: absolute;
     left: 0px;
-    
+
 }
 
-.account-card.card1:hover::before{
-    background-color:white;
+.account-card.card1:hover::before {
+    background-color: white;
     color: grey;
     padding: 2px 8px 2px 8px;
     font-size: 18px;
@@ -87,9 +89,9 @@ body {
     left: -5px;
 }
 
-.account-card.card1::after{
+.account-card.card1::after {
     content: "84";
-    background-color:rgb(255, 0, 0);
+    background-color: rgb(255, 0, 0);
     color: rgb(255, 255, 255);
     padding: 3px 4px 3px 4px;
     font-size: 13.5px;
@@ -109,34 +111,35 @@ body {
     font-size: 18px;
 }
 
-.account-2-pic-div{
+.account-2-pic-div {
     background-color: #f5f6f7;
     padding: 58px;
     border-top-right-radius: 8px;
     border-top-left-radius: 8px;
 }
 
-.account-2-pic{
+.account-2-pic {
     width: 42px;
     height: 42px;
     border-radius: 22px;
 }
 
-.form-side{
+.form-side {
     margin-right: 140px;
 }
 
-#form-container{
+#form-container {
     max-width: 396px;
     background-color: white;
     text-align: center;
-    padding: 20px 0px 28px 0px ;
+    padding: 20px 0px 28px 0px;
     border-radius: 8px;
     margin-top: 34px;
-     box-shadow: 0px 0px 3px rgb(170, 170, 170);
+    box-shadow: 0px 0px 3px rgb(170, 170, 170);
 }
-input{
-    margin:6px 0px 6px 0px;
+
+input {
+    margin: 6px 0px 6px 0px;
     height: 52px;
     width: 364px;
     font-size: 15px;
@@ -146,27 +149,27 @@ input{
     color: #222222;
 }
 
-input:focus{
+input:focus {
     outline-color: #7daff0;
     outline-width: 1px;
     outline-style: inset;
 }
 
-#user-password{
+#user-password {
     padding-right: 52px;
 }
 
-.password-section{
+.password-section {
     position: relative;
 }
 
-.password-visible{
+.password-visible {
     position: absolute;
     top: 22px;
     right: 30px;
 }
 
-.password-visible:hover{
+.password-visible:hover {
     background-color: #e0e0e0;
     width: 20px;
     height: 20px;
@@ -174,17 +177,19 @@ input:focus{
     border-radius: 10px;
 }
 
-.eye-image:active{
-    display: none;
-} 
-.eye-image:focus{
-    display: none;
-}
-.eye-image:visited{
+.eye-image:active {
     display: none;
 }
 
-#submit{
+.eye-image:focus {
+    display: none;
+}
+
+.eye-image:visited {
+    display: none;
+}
+
+#submit {
     background-color: #1877f2;
     color: white;
     border: none;
@@ -192,23 +197,23 @@ input:focus{
     font-size: 20px;
 }
 
-#submit:hover{
+#submit:hover {
     background-color: #176fe2;
 }
 
-.forgot-pass{
-    margin-top:16px;
+.forgot-pass {
+    margin-top: 16px;
     font-size: 14px;
     text-decoration: none;
     color: #1877f2;
 }
 
-hr{
+hr {
     width: 364px;
     margin: 20px 16px 20px 16px;
 }
 
-.create-account{
+.create-account {
     color: white;
     background-color: #42b72a;
     padding: 14px 21px 14px 21px;
@@ -218,46 +223,275 @@ hr{
     font-weight: bold;
 }
 
-.create-account:hover{
+.create-account:hover {
     background-color: #23b306;
 }
 
-.extra-info{
+.extra-info {
     font-size: 14px;
     margin: 28px 0px 0px 0px;
     text-align: center;
 }
 
-.create-page{
+.create-page {
     text-decoration: none;
-   color: black;
+    color: black;
     font-weight: bold;
 }
 
 /* MOBILE VIEW. */
 
 @media (max-width:900px) {
-    body{
-        overflow-x:hidden;
-        
-    }
-    .container{
-        flex-direction: column;
-        align-items: center;
-    
+    body {
+        overflow-x: hidden;
+
     }
 
-    .user-info{
-         text-align: center;
-         margin-left: 0px;
+    .container {
+        flex-direction: column;
+        align-items: center;
+
     }
-    .accounts{
-        margin-right: 0px ;
+
+    .user-info {
+        text-align: center;
+        margin-left: 0px;
+    }
+
+    .accounts {
+        margin-right: 0px;
         justify-content: center;
+        margin: 0px 0px 0px 14.5px;
+
+
     }
-    .form-side{
+
+    .form-side {
         display: inline-block;
         margin-right: 0;
         text-align: center;
     }
-}  
+}
+
+@media (max-width:536px){
+    .user-info{
+        width:280px ;
+    }
+}
+
+@media (max-width:400px){
+    .main-form {
+        width: 360px;
+    }
+
+    #form-container {
+        width: 360px;
+    }
+
+    #user-phonenumber {
+        width: 330px;
+
+    }
+
+    #user-phonenumber:placeholder-shown {
+        font-size: 15px;
+    }
+
+    #user-password {
+        width: 330px;
+    }
+
+    #user-password:placeholder-shown {
+        font-size: 15px;
+    }
+
+    #submit {
+        width: 330px;
+        font-size: 19px;
+    }
+
+    hr {
+        width: 330px;
+    }
+
+    .create-account {
+        font-size: 17px;
+        
+    }
+
+
+}
+
+@media (max-width:360px) {
+    .showcase {
+        padding: 46px 0px 46px 0px;
+    }
+
+ 
+
+    .logo {
+        width: 180px;
+        padding: 0px 0px 6px 0px;
+    }
+
+    .recent-l {
+        font-size: 25px;
+        padding: 0px 0px 4px 0px;
+        margin: 0px 0px 4px 0px;
+    }
+
+    .user-suggestion {
+        font-size: 13px;
+    }
+
+    .accounts {
+        margin: 0px 0px 0px 14.5px;
+    }
+
+    .account-1-pic {
+        width: 130px;
+        height: 130px;
+    }
+
+    .account-2-pic-div {
+        padding: 43px;
+    }
+
+    .account-name {
+        font-size: 14px;
+    }
+
+    .main-form {
+        width: 340px;
+    }
+
+    #form-container {
+        width: 340px;
+    }
+
+    #user-phonenumber {
+        width: 320px;
+
+    }
+
+    #user-phonenumber:placeholder-shown {
+        font-size: 13px;
+    }
+
+    #user-password {
+        width: 320px;
+    }
+
+    #user-password:placeholder-shown {
+        font-size: 13px;
+    }
+
+    #submit {
+        width: 320px;
+        font-size: 17px;
+    }
+
+    hr {
+        width: 320px;
+    }
+
+    .create-account {
+        font-size: 15px;
+        padding: 11px 18px;
+    }
+
+    .extra-info {
+        font-size: 12px;
+    }
+}
+
+@media (max-width:340px){
+
+    .logo {
+        width: 160px;
+        
+    }
+
+    .recent-l {
+        font-size: 23px;
+    
+    }
+
+    .user-suggestion {
+        font-size: 12px;
+    }
+
+    
+
+    .account-1-pic {
+        width: 110px;
+        height: 110px;
+    }
+
+    .account-2-pic-div {
+        padding: 34px;
+    }
+
+    .account-name {
+        font-size: 13px;
+    }
+
+    .main-form {
+        width: 280px;
+    }
+
+    #form-container {
+        width: 280px;
+        height: 300px;
+    }
+    
+    #user-phonenumber {
+        width: 250px;
+        height: 46px;
+
+    }
+
+    #user-phonenumber:placeholder-shown {
+        font-size: 13px;
+    }
+
+    #user-password {
+        width: 250px;
+        height: 46px;
+    }
+
+    #user-password:placeholder-shown {
+        font-size: 13px;
+    }
+
+    #submit {
+        width: 250px;
+        height: 46px;
+        font-size: 15px;
+    }
+
+    hr {
+        width: 250px;
+        margin: 10px 0px 15px 15px;
+    }
+
+    .create-account {
+        font-size: 13px;
+        padding: 9px 14px;
+    }
+
+    .extra-info {
+        font-size: 10px;
+    }
+}
+
+@media (max-width:280px){
+    .main-form {
+        width: 270px;
+    }
+
+    #form-container {
+        width: 270px;
+    }
+
+}
